{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 27,
  "lineage": "30eecce7-a9e3-1e1a-110e-6a71f114925f",
  "resources": [
    {
      "module": "module.main-instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f74c08b8b5effa56",
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:instance/i-0d15670c32d7b41f8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d15670c32d7b41f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00a92a97306d4751b",
            "private_dns": "ip-10-0-101-250.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.250",
            "public_dns": "ec2-54-255-188-42.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.188.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-025afbb3cb3dc6b11",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0490c4d2f60106c44"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0244d28e26e9ee406",
            "tags": {
              "Environmnent": "prod",
              "Name": "instance-prod"
            },
            "tags_all": {
              "Environmnent": "prod",
              "Name": "instance-prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0490c4d2f60106c44"
            ]
          },
          "dependencies": [
            "module.main-instances.aws_key_pair.key_pair",
            "module.main-instances.aws_security_group.allow_ssh",
            "module.prod-vpc.module.main-vpc.aws_subnet.public",
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:security-group/sg-0490c4d2f60106c44",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0490c4d2f60106c44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-prod",
            "name_prefix": "",
            "owner_id": "487628650335",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environmnent": "prod",
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Environmnent": "prod",
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:network-acl/acl-070eaa08d30ccefe6",
            "default_network_acl_id": "acl-070eaa08d30ccefe6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-070eaa08d30ccefe6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "487628650335",
            "subnet_ids": [
              "subnet-00a48939cc9e81739",
              "subnet-0222f4185fd86a0ff",
              "subnet-0244d28e26e9ee406",
              "subnet-0b3f787ee488d6943",
              "subnet-0b9ebcdd8cd21d15d"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:route-table/rtb-0193f01c8d979cec6",
            "default_route_table_id": "rtb-0193f01c8d979cec6",
            "id": "rtb-0193f01c8d979cec6",
            "owner_id": "487628650335",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:security-group/sg-0590146d93cd33983",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0590146d93cd33983",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "487628650335",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:internet-gateway/igw-02b621ab1b22267db",
            "id": "igw-02b621ab1b22267db",
            "owner_id": "487628650335",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02b621ab1b22267db",
            "id": "r-rtb-07de258a1a721f3bb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07de258a1a721f3bb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_internet_gateway.this",
            "module.prod-vpc.module.main-vpc.aws_route_table.public",
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:route-table/rtb-008676f1923ae46e9",
            "id": "rtb-008676f1923ae46e9",
            "owner_id": "487628650335",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:route-table/rtb-0799e7679a8f02769",
            "id": "rtb-0799e7679a8f02769",
            "owner_id": "487628650335",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:route-table/rtb-0475f2180414dd33b",
            "id": "rtb-0475f2180414dd33b",
            "owner_id": "487628650335",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:route-table/rtb-07de258a1a721f3bb",
            "id": "rtb-07de258a1a721f3bb",
            "owner_id": "487628650335",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0930d357ee4a862b7",
            "route_table_id": "rtb-008676f1923ae46e9",
            "subnet_id": "subnet-00a48939cc9e81739"
          },
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_route_table.private",
            "module.prod-vpc.module.main-vpc.aws_subnet.private",
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a07c4c78a584a2d",
            "route_table_id": "rtb-0799e7679a8f02769",
            "subnet_id": "subnet-0b3f787ee488d6943"
          },
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_route_table.private",
            "module.prod-vpc.module.main-vpc.aws_subnet.private",
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b647608d22de63ba",
            "route_table_id": "rtb-0475f2180414dd33b",
            "subnet_id": "subnet-0b9ebcdd8cd21d15d"
          },
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_route_table.private",
            "module.prod-vpc.module.main-vpc.aws_subnet.private",
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ab35cccc3fce962",
            "route_table_id": "rtb-07de258a1a721f3bb",
            "subnet_id": "subnet-0244d28e26e9ee406"
          },
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_route_table.public",
            "module.prod-vpc.module.main-vpc.aws_subnet.public",
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e102287a83f9b23e",
            "route_table_id": "rtb-07de258a1a721f3bb",
            "subnet_id": "subnet-0222f4185fd86a0ff"
          },
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_route_table.public",
            "module.prod-vpc.module.main-vpc.aws_subnet.public",
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b78008de2c6f8468",
            "route_table_id": "rtb-07de258a1a721f3bb",
            "subnet_id": "subnet-0e27630a536a0f722"
          },
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_route_table.public",
            "module.prod-vpc.module.main-vpc.aws_subnet.public",
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:subnet/subnet-00a48939cc9e81739",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a48939cc9e81739",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "487628650335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:subnet/subnet-0b3f787ee488d6943",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3f787ee488d6943",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "487628650335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:subnet/subnet-0b9ebcdd8cd21d15d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9ebcdd8cd21d15d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "487628650335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:subnet/subnet-0244d28e26e9ee406",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0244d28e26e9ee406",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "487628650335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-public-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-public-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:subnet/subnet-0222f4185fd86a0ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0222f4185fd86a0ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "487628650335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-public-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-public-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:subnet/subnet-0e27630a536a0f722",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e27630a536a0f722",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "487628650335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-public-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-public-ap-southeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05f93c8dbf294bd81"
          },
          "dependencies": [
            "module.prod-vpc.module.main-vpc.aws_vpc.this",
            "module.prod-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:487628650335:vpc/vpc-05f93c8dbf294bd81",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-070eaa08d30ccefe6",
            "default_route_table_id": "rtb-0193f01c8d979cec6",
            "default_security_group_id": "sg-0590146d93cd33983",
            "dhcp_options_id": "dopt-bfb14ad9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05f93c8dbf294bd81",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0193f01c8d979cec6",
            "owner_id": "487628650335",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}